--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,9 @@
 worker_processes 1;
 
+rtmp_auto_push on;
+rtmp_auto_push_reconnect 1s;
+rtmp_socket_dir /tmp;
+
 events {
 	worker_connections 1024;
 }
@@ -13,32 +17,37 @@ http {
 		listen          8080;
 		server_name     localhost;
 
-		location /hls {
+		location /live {
+            chunked_transfer_encoding on; #open 'Transfer-Encoding: chunked' response
+
+			# Disable cache
+			add_header Cache-Control no-cache;
+
+			# CORS setup
+			add_header 'Access-Control-Allow-Origin' '*' always;
+			add_header 'Access-Control-Expose-Headers' 'Content-Length';
+			add_header Access-Control-Allow-Headers Range;
+
+			# allow CORS preflight requests
+			if ($request_method = 'OPTIONS') {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Max-Age' 1728000;
+				add_header 'Content-Type' 'text/plain charset=UTF-8';
+				add_header 'Content-Length' 0;
+				return 204;
+			}
+
 			types {
 				application/x-mpegURL m3u8;
 				application/dash+xml mpd;        
 				video/MP2T ts;
 				video/mp4 mp4;
 			}
+
 			root /data;
-			add_header  Cache-Control no-cache;
 		}
 
-		location /on_publish {
-			return  201;
-		}
-		location /stat {
-			rtmp_stat all;
-			rtmp_stat_stylesheet stat.xsl;
-		}
-		location /stat.xsl {
-			root /opt/nginx/conf/stat.xsl;
-		}
-		location /control {
-			rtmp_control all;
-		}
-
-		error_page  500 502 503 504 /50x.html;
+		error_page 500 502 503 504 /50x.html;
 		location = /50x.html {
 			root html;
 		}
@@ -46,15 +55,48 @@ http {
 }
 
 rtmp {
-	server {
-		listen 1935;
-		chunk_size 4096;
-		application live {
-			live on;
-			record off;
-			on_publish http://localhost:8080/on_publish;
-			hls on;
-			hls_path /data/hls;
-		}
-	}
+    out_queue   4096;
+    out_cork    8;
+
+    server {
+        listen 1935;
+
+        application app {
+            live on;
+            gop_cache on; #open GOP cache for low latency
+
+            # No RTMP playback
+            deny play all;
+
+            # Push this stream to the local HLS packaging application
+            push rtmp://127.0.0.1:1935/hls-live;
+
+            # HTTP callback when a stream starts publishing
+            # Should return 2xx to allow, 3xx to redirect, anything else to deny.
+            on_publish http://api.$DOMAIN/live/publish;
+
+            # Called when a stream stops publishing. Response is ignored.
+            on_publish_done http://api.$DOMAIN/live/on_publish_done;
+        }
+
+        application hls-live {
+            live on;
+            gop_cache on; #open GOP cache for low latency
+
+            # No RTMP playback
+            deny play all;
+
+            # Only allow publishing from localhost
+            allow publish 127.0.0.1;
+            deny publish all;
+
+            # Package this stream as HLS
+            hls on;
+            hls_path /data/live;
+
+            # Put streams in their own subdirectory under `hls_path`
+            hls_nested on;
+            hls_fragment_naming system;
+        }
+    }
 }
