Working BLSS support

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,25 @@
-worker_processes 1;
+worker_processes auto; #should be 1 for Windows, for it doesn't support Unix domain socket
+relay_stream hash;    # stream relay mode
 
-rtmp_auto_push on;
-rtmp_auto_push_reconnect 1s;
-rtmp_socket_dir /tmp;
+error_log logs/error.log debug;
+
+worker_rlimit_nofile 100000;
+
+auto_relay_socket_dir /tmp;
 
 events {
-	worker_connections 1024;
+    worker_connections  10240;
+    accept_mutex off;
+    use epoll;
 }
 http {
 	include             mime.types;
 	default_type        application/octet-stream;
-	sendfile            on;
-	keepalive_timeout   65;
+
+    sendfile on;
+    sendfile_max_chunk 512k;
+
+    keepalive_timeout   65;
 
 	server {
 		listen          8080;
@@ -59,44 +67,50 @@ rtmp {
     out_cork    8;
 
     server {
-        listen 1935;
+        listen 1935 reuseport;
+        service guac {
+            hostname direct-bi proto-all localhost 127.0.0.1 *.local.guac.live *.guac.live;
+            application app {
+                live on;
 
-        application app {
-            live on;
-            gop_cache on; #open GOP cache for low latency
+                # No RTMP playback
+                deny play all;
 
-            # No RTMP playback
-            deny play all;
+                # Push this stream to the local HLS packaging application
+                push rtmp://127.0.0.1:1935/hls-live;
 
-            # Push this stream to the local HLS packaging application
-            push rtmp://127.0.0.1:1935/hls-live;
+                # HTTP callback when a stream starts publishing
+                # Should return 2xx to allow, 3xx to redirect, anything else to deny.
+                on_publish http://api.$DOMAIN/live/publish;
 
-            # HTTP callback when a stream starts publishing
-            # Should return 2xx to allow, 3xx to redirect, anything else to deny.
-            on_publish http://api.$DOMAIN/live/publish;
+                # Called when a stream stops publishing. Response is ignored.
+                on_publish_done http://api.$DOMAIN/live/on_publish_done;
+            }
 
-            # Called when a stream stops publishing. Response is ignored.
-            on_publish_done http://api.$DOMAIN/live/on_publish_done;
-        }
+            application hls-live {
+                live on;
 
-        application hls-live {
-            live on;
-            gop_cache on; #open GOP cache for low latency
+                gop_cache on;
+                gop_cache_count 5;  # cache 5 GOPs
 
-            # No RTMP playback
-            deny play all;
+                # No RTMP playback
+                deny play all;
 
-            # Only allow publishing from localhost
-            allow publish 127.0.0.1;
-            deny publish all;
+                # Only allow publishing from localhost
+                allow publish 127.0.0.1;
+                deny publish all;
 
-            # Package this stream as HLS
-            hls on;
-            hls_path /data/live;
+                # Package this stream as HLS
+                hls on;
+                hls_path /data/live;
 
-            # Put streams in their own subdirectory under `hls_path`
-            hls_nested on;
-            hls_fragment_naming system;
-        }
+                hls_playlist_length 6s;
+                hls_fragment 2s;
+
+                # Put streams in their own subdirectory under `hls_path`
+                hls_nested on;
+                hls_fragment_naming system;
+            }
+        } 
     }
 }
