--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
     keepalive_timeout   65;
 
 	server {
-		listen          8080;
+		listen          8080 reuseport;
 		server_name     localhost;
 
 		location /live {
@@ -46,11 +46,12 @@ http {
 			}
 
 			types {
-				application/x-mpegURL m3u8;
-				application/dash+xml mpd;        
-				video/MP2T ts;
-				video/mp4 mp4;
-			}
+                application/x-mpegURL m3u8;
+                application/dash+xml mpd;        
+                video/MP2T ts;
+                video/mp4 mp4;
+                video/x-flv flv;
+            }
 
 			root /data;
 		}
