--- a/nginx.conf
+++ b/nginx.conf
@@ -101,12 +101,15 @@ rtmp {
                 allow publish 127.0.0.1;
                 deny publish all;
 
+                idle_streams off;
+
                 # Package this stream as HLS
                 hls on;
                 hls_path /data/live;
 
-                hls_playlist_length 6s;
-                hls_fragment 2s;
+                hls_fragment 1s;
+                hls_max_fragment 3s;
+                hls_playlist_length 15s;
 
                 # Put streams in their own subdirectory under `hls_path`
                 hls_nested on;
