--- a/nginx.conf
+++ b/nginx.conf
@@ -86,6 +86,13 @@ rtmp {
 
                 # Called when a stream stops publishing. Response is ignored.
                 on_publish_done http://api.$DOMAIN/live/on_publish_done;
+
+                # FFMpeg encoding
+                exec ffmpeg -i rtmp://localhost:1935/$app/$name
+                    -c:a libfdk_aac -b:a 32k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 128K -f flv rtmp://localhost:1935/live/$name_low
+                    -c:a libfdk_aac -b:a 64k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 256k -f flv rtmp://localhost:1935/live/$name_medium
+                    -c:a libfdk_aac -b:a 128k -c:v libx264 -preset ultrafast -tune zerolatency -b:v 512K -f flv rtmp://localhost:1935/live/$name_high
+                    -c copy -f flv rtmp://localhost:1935/live/$name_src;
             }
 
             application hls-live {
@@ -114,6 +121,13 @@ rtmp {
                 # Put streams in their own subdirectory under `hls_path`
                 hls_nested on;
                 hls_fragment_naming system;
+
+                # Instruct clients to adjust resolution according to bandwidth
+                hls_variant _src BANDWIDTH=1500000;
+                hls_variant _low BANDWIDTH=160000;
+                hls_variant _medium BANDWIDTH=320000;
+                hls_variant _high  BANDWIDTH=640000;
+
             }
         } 
     }
