--- a/nginx.conf
+++ b/nginx.conf
@@ -89,10 +89,10 @@ rtmp {
 
                 # FFMpeg encoding
                 exec ffmpeg -i rtmp://localhost:1935/$app/$name
-                    -c:a libfdk_aac -b:a 32k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 128K -f flv rtmp://localhost:1935/live/$name_low
-                    -c:a libfdk_aac -b:a 64k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 256k -f flv rtmp://localhost:1935/live/$name_medium
-                    -c:a libfdk_aac -b:a 128k -c:v libx264 -preset ultrafast -tune zerolatency -b:v 512K -f flv rtmp://localhost:1935/live/$name_high
-                    -c copy -f flv rtmp://localhost:1935/live/$name_src;
+                    -c:a libfdk_aac -b:a 32k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 128K -f flv rtmp://localhost:1935/hls-live/$name_low
+                    -c:a libfdk_aac -b:a 64k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 256k -f flv rtmp://localhost:1935/hls-live/$name_medium
+                    -c:a libfdk_aac -b:a 128k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 512K -f flv rtmp://localhost:1935/hls-live/$name_high
+                    -c copy -f flv rtmp://localhost:1935/hls-live/$name_src;
             }
 
             application hls-live {
@@ -114,9 +114,11 @@ rtmp {
                 hls on;
                 hls_path /data/live;
 
-                hls_fragment 1s;
-                hls_max_fragment 3s;
-                hls_playlist_length 15s;
+                hls_fragment 2s;
+                hls_playlist_length 8s;
+                wait_video off;
+                hls_max_fragment 8s;
+
 
                 # Put streams in their own subdirectory under `hls_path`
                 hls_nested on;
