Remove GOP cache and slight change to ffmpeg command
Prevents FFMPEG from erroring with hls: force fragment split

--- a/nginx.conf
+++ b/nginx.conf
@@ -88,7 +88,7 @@ rtmp {
                 on_publish_done http://api.$DOMAIN/live/on_publish_done;
 
                 # FFMpeg encoding
-                exec ffmpeg -i rtmp://localhost:1935/$app/$name
+                exec ffmpeg -re -i rtmp://localhost:1935/$app/$name
                     -c:a libfdk_aac -b:a 32k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 128K -f flv rtmp://localhost:1935/hls-live/$name_low
                     -c:a libfdk_aac -b:a 64k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 256k -f flv rtmp://localhost:1935/hls-live/$name_medium
                     -c:a libfdk_aac -b:a 128k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 512K -f flv rtmp://localhost:1935/hls-live/$name_high
@@ -97,9 +97,6 @@ rtmp {
 
             application hls-live {
                 live on;
-
-                gop_cache on;
-                gop_cache_count 5;  # cache 5 GOPs
 
                 # No RTMP playback
                 deny play all;
