Transcoding (disabled for now)

--- a/nginx.conf
+++ b/nginx.conf
@@ -88,11 +88,8 @@ rtmp {
                 on_publish_done http://api.$DOMAIN/live/on_publish_done;
 
                 # FFMpeg encoding
-                exec ffmpeg -re -i rtmp://localhost:1935/$app/$name
-                    -c:a libfdk_aac -b:a 32k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 128K -f flv rtmp://localhost:1935/hls-live/$name_low
-                    -c:a libfdk_aac -b:a 64k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 256k -f flv rtmp://localhost:1935/hls-live/$name_medium
-                    -c:a libfdk_aac -b:a 128k  -c:v libx264 -preset ultrafast -tune zerolatency -b:v 512K -f flv rtmp://localhost:1935/hls-live/$name_high
-                    -c copy -f flv rtmp://localhost:1935/hls-live/$name_src;
+                #exec /usr/local/bin/transcode.sh $app $name;
+                #exec_kill_signal term;
             }
 
             application hls-live {
